<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/edtItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_item_name"
        android:ems="10"
        android:hint="@string/enter_item_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="@dimen/edit_items_text_size"
        app:layout_constraintBottom_toTopOf="@id/tvt_ItemDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvt_ItemName" />


    <EditText
        android:id="@+id/edtItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_item_description"
        android:ems="10"
        android:hint="@string/enter_item_description"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tvt_ItemQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvt_ItemDescription" />

    <EditText
        android:id="@+id/edtItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_item_quantity"
        android:ems="10"
        android:hint="@string/enter_item_quantity"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tvt_ItemSellingPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvt_ItemQuantity" />

    <EditText
        android:id="@+id/edtItemSellingPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_item_selling_price"
        android:ems="10"
        android:hint="@string/enter_item_selling_price"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvt_ItemSellingPrice" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_insert"
        app:layout_constraintBottom_toTopOf="@+id/btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_previous"
        android:textSize="@dimen/buttons_text_size"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        app:layout_constraintBottom_toTopOf="@id/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_insert"
        android:textSize="@dimen/buttons_text_size"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_delete_hint"
        android:maxHeight="12dp"
        android:text="@string/btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update"
        android:textSize="@dimen/buttons_text_size"/>

    <TextView
        android:id="@+id/id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/item_id"
        android:textColor="@color/gray"
        android:textSize="@dimen/display_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tvt_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_id"
        android:minWidth="220dp"
        android:textColor="@color/black"
        android:textSize="@dimen/edit_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tvt_ItemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_label" />

    <Button
        android:id="@+id/btn_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_display"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItemSellingPrice"
        android:textSize="@dimen/buttons_text_size"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toTopOf="@+id/btn_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_display"
        android:textSize="@dimen/buttons_text_size"/>

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_previous"
        app:layout_constraintBottom_toTopOf="@+id/btn_insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next"
        android:textSize="@dimen/buttons_text_size"/>

    <TextView
        android:id="@+id/tvt_ItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_item_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/display_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/edtItemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvt_id" />

    <TextView
        android:id="@+id/tvt_ItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_item_description"
        android:textColor="@color/gray"
        android:textSize="@dimen/display_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/edtItemDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItemName" />

    <TextView
        android:id="@+id/tvt_ItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_item_quantity"
        android:textColor="@color/gray"
        android:textSize="@dimen/display_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/edtItemQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItemDescription" />

    <TextView
        android:id="@+id/tvt_ItemSellingPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_item_selling_price"
        android:textColor="@color/gray"
        android:textSize="@dimen/display_items_text_size"
        app:layout_constraintBottom_toTopOf="@+id/edtItemSellingPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItemQuantity" />
</androidx.constraintlayout.widget.ConstraintLayout>